fix: modal height on mobile

--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -4,7 +4,6 @@
   right: 0;
   bottom: 0;
   left: 0;
-  width: calc(100% - 15px);
   z-index: 200;
   display: flex;
   align-items: center;
@@ -14,6 +13,10 @@
   visibility: hidden;
   pointer-events: none;
   transition: opacity 0.4s ease-in-out, visibility 0.4s ease-in-out;
+
+  @include mq(mob-only) {
+    width: calc(100% - 20px);
+  }
 
   &.visible {
     opacity: 1;
@@ -41,7 +44,7 @@
     }
 
     @include mq(mob-only) {
-      height: 100vh;
+      height: calc(100% - 40px);
     }
     @include mq(tab) {
       max-width: 705px;
